# DataSecurity-MeliChallenge

./: .dockerignore  .env.example  .gitignore  Dockerfile  ENTREGA_CHECKLIST.md  GUIA_MIGRACION_MCP.md  Guide.md  MeliChallenge.md  README.md  docker-compose.yml  main.py  pyproject.toml
api/: app.py  auto_dotenv.py  main.py
api/routers/: analysis.py  rag.py
api/schemas/: analysis.py
api/services/: crew_service.py  rag_service.py
data/custom_inputs/: input_example_1.txt  input_example_2.txt  input_example_3.txt  input_example_4.txt  input_example_5.txt
data/examples/: security_report_output.json  security_report_output.md
docker/: Dockerfile.mitre-mcp
evaluation/: benchmark_modes.py  validate_rag.py
frontend/: index.html
frontend/assets/css/: styles.css
frontend/assets/js/: app.js
reports/: output_example_1.json
src/: agents.py  cache.py  config.py  llm_provider.py  logging_config.py  main_crew.py  mcp_crews.py  models.py  trace.py  turbo_pipeline.py
src/rag_system/: ingest.py  redis_docstore.py  retriever_factory.py
src/tools/: dbir_rag_tool.py  mcp_external.py  mitre_tool.py  retriever.py
tests/: test_api.py  test_api_file_upload.py  test_crew.py  test_health.py  test_llm_provider.py  test_logging_and_security.py  test_mitre_tool_normalization.py  test_parsing_agent.py  test_parsing_agent_extra.py  test_rag_debug_endpoint.py  test_rag_endpoint.py  test_services.py  test_tool_tracing.py  test_tools.py  test_tools_errors.py  test_tools_errors_unit.py  test_ui_serving.py
tests/e2e/: test_api_end_to_end.py
